# TimeStretch

./: .gitignore  FluidNMFStretch.sc  FluidNMFStretchExtension.sc  README.md  TimeStretch.quark  TimeStretch.sc  VBAPPanner.sc  allTogetherNow.scd  real_time_stretch100.sc  stretch100.scd
.github/workflows/: blank.yml  release.yml
Classes/: TimeStretch.sc
HelpSource/: TimeStretch.schelp
python/: NessStretch documentation.ipynb  README.md  TODO.md  fancystft.py  fstft2a.py  nessstretch.py  presets.csv  rwindow.py  timestretch2a.py
python/.ipynb_checkpoints/: NessStretch documentation-checkpoint.ipynb
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust/time_stretch/: Cargo.toml
rust/time_stretch/sound/: tng_100.wav.reapeaks  tng_100_prescope.wav.reapeaks
rust/time_stretch/src/: main.rs
supercollider/: README.md
supercollider/Classes/: SignalExtensions.sc  TimeStretch.sc  TimeStretch2.sc  TimeStretch3.sc  TimeStretch4.sc  TimeStretch5.sc  TimeStretch6.sc  TimeStretchFluidExtensions.sc  TimeStretchWN.sc
supercollider/HelpSource/: TimeStretch.schelp  TimeStretch2.schelp
