[package]
name = "ness_stretch"
version = "0.1.1"
authors = ["Sam Pluta <spluta@gmail.com>", "Alex Ness <asness@gmail.com>"]
edition = "2018"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rustfft = "6.0.1"
realfft = "2.0.1"
rand="0.8.0"
hound = "3.4.0"
chrono = "0.4"
clap = "2.33.3"
bwavfile = "0.9.3"
crossbeam-utils = "0.8.1"