[package]
name = "ness_stretch"
version = "0.4.3"
authors = ["Sam Pluta <spluta@gmail.com>", "Alex Ness <asness@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["audio", "rustfft", "timestretch"]
categories = ["multimedia::audio", "multimedia"]
repository = "https://github.com/spluta/TimeStretch"
readme = "README.md"
description = "Implements a phase randomized Real FFT time stretch algorithm, the NessStretch, which splits the original sound file into 1-10 discrete frequency bands, and uses a decreasing frame size to correspond to increasing frequency, thus doing a excellent job of resolving shorter, noisier high-frequency sounds and creating rich, lush low frequency pads."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# ness_stretch_lib = {version = "0.1.2"}
ness_stretch_lib = "0.1.2"
clap = { version = "4.3.17", features = ["derive"] }

